<?php
/**
 * Created by PhpStorm.
 * User: Administrator
 * Date: 2020/5/12
 * Time: 23:02
 */
interface Duck {
    public function quack();
    public function fly();
}