<?php
/**
 * Created by PhpStorm.
 * User: Administrator
 * Date: 2020/5/12
 * Time: 23:09
 */
interface Turkey {
    public function gobble();
    public function fly();
}