<?php
include_once 'Turkey.php';

/**
 * Created by PhpStorm.
 * User: Administrator
 * Date: 2020/5/12
 * Time: 23:13
 */
class WildTurkey implements Turkey {
    public function gobble()
    {
        // TODO: Implement gobble() method.
        echo 'gobble' . PHP_EOL;
    }

    public function fly()
    {
        // TODO: Implement fly() method.
        echo 'flying short' . PHP_EOL;
    }
}